tools/tests/errors/surf_cls_06.ki
# calling an instance that defines no _call_ is an error
class C:
    var _init_ = Function(self):
        self.x = 1
var c = C()
discard c()
